# dqbench

./: .clinerules  .cursorrules  .gitignore  .windsurfrules  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  llms.txt  pyproject.toml
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: test.yml  try-all.yml  try-it.yml  try-pipeline.yml
docs/: _config.yml  index.md  llms-full.txt  llms.txt
docs/superpowers/plans/: 2026-03-23-dqbench-implementation.md  2026-03-29-er-pipeline-benchmarks.md
docs/superpowers/specs/: 2026-03-23-dqbench-design.md  2026-03-25-transform-benchmarks-design.md  2026-03-29-er-pipeline-benchmarks-design.md  ocr-company-benchmark.md
dqbench/: __init__.py  cli.py  er_ground_truth.py  er_scorer.py  ground_truth.py  models.py  ocr_company_scorer.py  pipeline_ground_truth.py  pipeline_scorer.py  report.py  runner.py  scorer.py  transform_scorer.py
dqbench/adapters/: CLAUDE.md  base.py  goldencheck.py  goldenflow.py  goldenmatch_adapter.py  goldenpipe_adapter.py  great_expectations_adapter.py  pandera_adapter.py  soda_adapter.py
dqbench/generator/: CLAUDE.md  clean.py  er_tier1.py  er_tier2.py  er_tier3.py  ocr_company.py  pipeline_tier1.py  pipeline_tier2.py  pipeline_tier3.py  tier1.py  tier2.py  tier3.py  utils.py
examples/: README.md  benchmark_your_tool.py  custom_adapter.py  golden_suite_benchmark.py  ocr_company_adapter.py  run_benchmark.py  run_er_benchmark.py  run_goldenmatch_benchmark.py  run_pipeline_benchmark.py
tests/: test_adapters.py  test_adapters_base.py  test_cli.py  test_er_generator.py  test_er_ground_truth.py  test_er_models.py  test_er_runner.py  test_er_scorer.py  test_generator_tier1.py  test_generator_tier2.py  test_generator_tier3.py  test_models.py  test_ocr_company_runner.py  test_ocr_company_scorer.py  test_pipeline_generator.py  test_pipeline_ground_truth.py  test_pipeline_runner.py  test_pipeline_scorer.py  test_runner.py  test_scorer.py  test_transform_scorer.py
