[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dqbench"
version = "1.0.0"
description = "The standard benchmark for data quality and validation tools"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Ben Severn", email = "benzsevern@gmail.com" }]
keywords = ["data-quality", "benchmark", "data-validation", "testing", "data-engineering"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "polars>=1.0",
    "typer>=0.12",
    "rich>=13.0",
    "pydantic>=2.0",
]

[project.urls]
Homepage = "https://github.com/benzsevern/dqbench"
Repository = "https://github.com/benzsevern/dqbench"

[project.scripts]
dqbench = "dqbench.cli:app"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.4"]
goldencheck = ["goldencheck>=0.2.0"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
